some sass change

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,5 @@
-// @import '../../sass/variable'
+@import "../../sass/main";
+*{
+   background:$main-color;
 
-// div{
-//    background-color : $main-color;
-// }
+}
