--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,8 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+
+.brandNav {
+  color: red;
+}
 /*# sourceMappingURL=App.css.map */
