--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=Header.css.map */
+.brandNav {
+  color: red !important;
+}
+/*# sourceMappingURL=Header.css.map */
