header design done

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,5 @@
 @import "../../sass/main";
-*{
-   background:$main-color;
-
+.login-btn{
+   background-color:$main-color !important ;
+   border:none !important;
 }
