--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,5 @@
-* {
-  background: orange;
+.login-btn {
+  background-color: #275A53 !important;
+  border: none !important;
 }
 /*# sourceMappingURL=Header.css.map */
