--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,1 @@
-.brandNav {
-  color: red !important;
-}
-/*# sourceMappingURL=Header.css.map */
+/* No CSS *//*# sourceMappingURL=Header.css.map */
