--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,11 +1,1 @@
-// @import '../../sass/variable'
-
-// div{
-//    background-color : $main-color;
-// }
-
-$main-color: red !important;
-
-.brandNav {
-  color: $main-color; 
-}
+@import "../../sass/main";
