--- a/src/components/BookingList/BookingList.scss
+++ b/src/components/BookingList/BookingList.scss
@@ -29,6 +29,7 @@ $active_color: #275A53;
 
             .dashboard_link {
                 cursor: pointer;
+                font-weight: 500;
 
                 &:hover {
                     text-decoration: underline;
