--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,1 @@
-.login-btn {
-  background-color: #275A53 !important;
-  border: none !important;
-}
-/*# sourceMappingURL=Header.css.map */
+/* No CSS *//*# sourceMappingURL=Header.css.map */
