--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-/*# sourceMappingURL=App.css.map */
+/* No CSS *//*# sourceMappingURL=App.css.map */
