Backend Function Done

--- a/src/components/Home/Houses/HouseDetails/HouseDetails.css
+++ b/src/components/Home/Houses/HouseDetails/HouseDetails.css
@@ -2,6 +2,7 @@
   background-color: #275A53 !important;
   border: none !important;
   font-size: 13px !important;
+  padding: 9px 17px !important;
 }
 
 .house-price {
