--- a/src/components/Home/Houses/HouseDetails/HouseDetails.scss
+++ b/src/components/Home/Houses/HouseDetails/HouseDetails.scss
@@ -2,6 +2,7 @@
 .view-button{
    @include my-button;
    font-size: 13px !important;
+   padding: 9px 17px !important;
 }
 .house-price{
    font-size: 32px;
