--- a/src/components/BookingList/BookingList.scss
+++ b/src/components/BookingList/BookingList.scss
@@ -77,6 +77,7 @@ $active_color: #275A53;
 
                 .user_name {
                     padding-left: 20px;
+                    font-weight: 500;
                 }
             }
             
